--- a/less/footer.less
+++ b/less/footer.less
@@ -7,7 +7,7 @@ footer {
 }
 
 .footer-ctn {
-  width: 70%;
+  width: 90%;
   display: flex;
   margin: 0 auto;
   @media @small-desktop {
@@ -64,14 +64,14 @@ footer {
 
   .footer-right-side {
     border-left: 1px solid #4c4c4c;
-    width: 45%;
+    width: 55%;
     padding-left: 100px;
     margin-top: 20px;
     @media @small-desktop {
       border-left: none;
       border-bottom: 1px solid #4c4c4c;
       width: 100%;
-      // padding-left: 0;
+      padding-left: 200px;
     }
 
     h4 {
@@ -101,16 +101,15 @@ footer {
 
     .footer-link-columns {
       display: flex;
-      justify-content: space-between;
       margin-bottom: 30px;
       @media @small-desktop {
         justify-content: flex-start;
       }
+
     }
 
     .company-work {
       display: flex;
-      justify-content: space-between;
       @media @small-desktop {
         justify-content: flex-start;
       }
